# quick-code-counter

./: .clang-tidy  .cmake-format  .gitignore  BUILD.sh  CMakeLists.txt  README.md  runTest.sh  vcpkg.json
include/qcc/: barChart.hpp  chartHandler.hpp  commentInfo.hpp  countInfo.hpp  counter.hpp  csvLanguageWise.hpp  csvVerbose.hpp  directoryIterator.hpp  fileCountInfo.hpp  fileInfo.hpp  jsonLanguageWise.hpp  jsonVerbose.hpp  language.hpp  languageData.hpp  languageId.hpp  languageWiseData.hpp  lineInfo.hpp  machine.hpp  outputFormat.hpp  result.hpp  tableLanguageWise.hpp  tableVerbose.hpp  textFormatting.hpp  timer.hpp  userInput.hpp  utility.hpp  verboseOutput.hpp  verboseResult.hpp
pythonScripts/: generateBarChart.py  generatePieChart.py
src/: barChart.cpp  chartHandler.cpp  countInfo.cpp  counter.cpp  csvLanguageWise.cpp  csvVerbose.cpp  directoryIterator.cpp  fileCountInfo.cpp  fileInfo.cpp  jsonLanguageWise.cpp  jsonVerbose.cpp  languageData.cpp  languageWiseData.cpp  lineInfo.cpp  machine.cpp  main.cpp  result.cpp  tableLanguageWise.cpp  tableVerbose.cpp  textFormatting.cpp  verboseOutput.cpp  verboseResult.cpp
tests/: CMakeLists.txt  counterTest.cpp  directoryIteratorTest.cpp  getLanguageIdTest.cpp
tests/sampleFiles/: mixedSample1.cpp  multilineSample.cpp  singleLineSample.cpp
tests/shebangTestFiles/: file1  file2  file3  file4
tests/tempTest/: ab.cpp
